# Random3dMaze

./: .gitignore  Cargo.toml  SConstruct  build.rs
doc/: architecture.plantuml  interactions.rst  ui_architecture.plantuml
res/: main.rc
src/: 3maze.rc  Tips.cpp  common.h  defines.h  funcs.h  game.cpp  game.rs  main.cpp  main.rs  map.rs  player.rs  render.rs  resource.h  structs.h  vars.h
src/model/: direction.hpp  field.hpp  field_factory.cpp  field_factory.hpp  point.hpp  rect.hpp
src/ui/: presenter.cpp  presenter.hpp
test/: direction_test.cpp  main.cpp  rect_test.cpp
