[package]
name = "Random3dMaze"
authors = ["portown <portown09@gmail.com>"]
version = "0.2.0"
license = "MIT"
description = "A simple 3D maze game"
repository = "https://github.com/portown/Random3dMaze.git"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
thiserror = "1.0.63"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
]

[build-dependencies]
winres = "0.1.12"
