[package]
name = "maze3d"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
]

[build-dependencies]
winres = "0.1.12"
